--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,9 @@
 footer {
-    background-color: black;
+    background-color: #020202ff;
     min-height: 260px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
   
     display: flex;
     justify-content: space-around;
@@ -17,8 +20,13 @@ footer h3 {
     font-size: 1rem;
     margin-bottom: 1rem;
 }
+
+footer h4 {
+    color: white;
+}
   
 .menu-footer ul li a{
+    text-decoration: none;
     color: white;
     font-weight: 400;
     font-size: 1rem;
