--- a/styles/footer.css
+++ b/styles/footer.css
@@ -21,8 +21,8 @@ footer h3 {
     margin-bottom: 1rem;
 }
 
-footer h4 {
-    color: white;
+footer p {
+    font-weight: 200;
 }
   
 .menu-footer ul li a{
