--- a/styles/header.css
+++ b/styles/header.css
@@ -42,6 +42,7 @@ header h1 {
     display: flex;
     justify-content: right;
     align-items: center;
+    overflow: hidden;
 }
 
 .menu ul li {
@@ -61,6 +62,7 @@ header nav ul {
 }
 
 header nav ul li a {
+    float: left;
     display: block;
     text-decoration: none;
     color: black;
@@ -68,10 +70,49 @@ header nav ul li a {
 }
 
 header nav a:hover,
-header nav a.active {
+header nav a.active,
+.dropdown:hover,
+.dropbtn {
   background-color: #FFE31E;
 }
 
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
 
+.dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: rgb(0, 0, 0);
+    padding: 0.625rem;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
 
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
