mudança no amarelo

--- a/styles/header.css
+++ b/styles/header.css
@@ -73,7 +73,7 @@ header nav a:hover,
 header nav a.active,
 .dropdown:hover,
 .dropbtn {
-  background-color: #FFE31E;
+  background-color: #ffd30f;
 }
 
 .dropdown {
