--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -49,3 +49,22 @@ button {
 button:hover {
     background-color: #4caf50;
 }
+
+.btn-add {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn-remove {
+    background-color: #f44336;
+    color: #fff;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 8px;
+}
