junção códigos bru e le | cadastro: campos e validação

--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -68,3 +68,7 @@ button:hover {
     cursor: pointer;
     margin-left: 8px;
 }
+
+#mensagemErroRegiao, #mensagemErroNomeLinha, #mensagemErroParadas, #mensagemErroHorario {
+    color: #f44336;
+}
