--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(255, 255, 239);
+}
+
 section {
     margin-top: 5rem;
     padding: 2rem 8rem;
@@ -29,6 +33,7 @@ input {
     border: 1px solid #ddd;
     border-radius: 4px;
 }
+
 textarea {
     padding: 10px;
     margin-bottom: 16px;
@@ -40,7 +45,6 @@ button {
     background-color: #E1D219;
     color: #fff;
     font-size: 16px;
-    padding: 12px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -50,7 +54,50 @@ button:hover {
     background-color: #4caf50;
 }
 
+#enviar{
+    max-width: 150px;
+    background: #FFD30F;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 1.275rem;
+    padding: 1rem;
+    border: 0;
+    transition: all 0.5s;
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+
+    &::after {
+        content: ">";
+        position: absolute;
+        left: 75%;
+        top: 30%;
+        right: 20%;
+        bottom: 0;
+        opacity: 0;
+
+    }
+
+    &:hover {
+        background: #ffd82b;
+        transition: all 0.5s;
+        padding: 1rem 3rem 1rem 1rem;
+
+        &::after {
+            opacity: 1;
+            transition: all 0.5s;
+
+        }
+    }
+}
+
+
 .btn-add {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 25px;
     background-color: #4caf50;
     color: #fff;
     padding: 8px;
