--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,7 @@
+body {
+    background-color:rgb(255, 255, 239);
+}
+
 section {
     margin-top: 5rem;
     padding: 2rem 8rem;
@@ -43,10 +47,6 @@ section {
     padding-bottom: 10px;
     text-align: center;
     font-size: 1.125rem;
-}
-
-.img {
-    text-align: center;
 }
 
 .card p {
