--- a/styles/header.css
+++ b/styles/header.css
@@ -28,7 +28,6 @@ header h1 {
     font-size: 1.375rem;
     margin: 0;
     padding: 0rem 0rem 0rem 0.5rem;
-
     text-decoration: none;
     color: black;
 }
@@ -74,6 +73,8 @@ header nav a.active,
 .dropdown:hover,
 .dropbtn {
   background-color: white;
+  border-radius: 4px;
+  transition: all 0.3s;
 }
 
 .dropdown {
@@ -82,7 +83,7 @@ header nav a.active,
 }
 
 .dropdown .dropbtn {
-    font-size: 16px;  
+    font-size: 16px;
     border: none;
     outline: none;
     color: rgb(0, 0, 0);
@@ -110,6 +111,7 @@ header nav a.active,
 
 .dropdown-content {
     display: none;
+    border-radius: 4px;
     position: absolute;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
